minimal: http-server-tls

--- a/minimal-examples/http-server/minimal-http-server-tls/CMakeLists.txt
+++ b/minimal-examples/http-server/minimal-http-server-tls/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 include(CheckCSourceCompiles)
 
-set(SAMP lws-minimal-ws-server-ring)
-set(SRCS minimal-ws-server.c)
+set(SAMP lws-minimal-http-server-tls)
+set(SRCS minimal-http-server-tls.c)
 
 # If we are being built as part of lws, confirm current build config supports
 # reqconfig, else skip building ourselves.
@@ -64,6 +64,7 @@ ENDMACRO()
 
 set(requirements 1)
 require_lws_config(LWS_WITHOUT_SERVER 0 requirements)
+require_lws_config(LWS_OPENSSL_SUPPORT 1 requirements)
 
 if (requirements)
 	add_executable(${SAMP} ${SRCS})
