--- a/minimal-examples/ws-server/minimal-ws-broker/CMakeLists.txt
+++ b/minimal-examples/ws-server/minimal-ws-broker/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-include(CheckSymbolExists)
+include(CheckCSourceCompiles)
 
 set(SAMP lws-minimal-ws-broker)
 set(SRCS minimal-ws-broker.c)
@@ -39,16 +39,17 @@ MACRO(require_lws_config reqconfig _val result)
 		if (LWS_WITH_MINIMAL_EXAMPLES)
 			set(MET ${SAME})
 		else()
-			CHECK_SYMBOL_EXISTS(${reqconfig} libwebsockets.h HAS)
-			if (NOT DEFINED HAS)
-				set(HAS 0)
+			CHECK_C_SOURCE_COMPILES("#include <libwebsockets.h>\nint main(void) {\n#if defined(${reqconfig})\n return 0;\n#else\n fail;\n#endif\n return 0;\n}\n" HAS_${reqconfig})
+			if (NOT DEFINED HAS_${reqconfig} OR NOT HAS_${reqconfig})
+				set(HAS_${reqconfig} 0)
+			else()
+				set(HAS_${reqconfig} 1)
 			endif()
-			if ((HAS AND ${_val}) OR (NOT HAS AND NOT ${_val}))
+			if ((HAS_${reqconfig} AND ${_val}) OR (NOT HAS_${reqconfig} AND NOT ${_val}))
 				set(MET 1)
 			else()
 				set(MET 0)
 			endif()
-	
 		endif()
 		if (NOT MET)
 			if (${_val})
@@ -60,7 +61,6 @@ MACRO(require_lws_config reqconfig _val result)
 	
 	endif()
 ENDMACRO()
-
 set(requirements 1)
 require_lws_config(LWS_WITHOUT_SERVER 0 requirements)
 
